--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </div>
         </div>
         <!--! headerNav -->
-        <div class="headerNav">
+        <div class="headerNav fixed-top" id="site-header">
           <!-- container-fluid -->
           <div class="container-fluid">
             <!-- headerNav__content -->
@@ -120,8 +120,11 @@
               </div>
               <!--! headerNav__right -->
               <div class="headerNav__right d-flex align-items-center">
-                <nav class="navbar navbar-expand-lg">
-                  <div class="collapse navbar-collapse" id="navbarScroll">
+                <nav class="navbar navbar-collapse">
+                  <div
+                    class="collapse navbar-collapse ml-lg-auto"
+                    id="navbarScroll"
+                  >
                     <ul
                       class="navbar-nav navbar-nav-scroll"
                       style="--bs-scroll-height: 100px"
@@ -134,7 +137,9 @@
                       </li>
                       <!-- nav-item ABOUT US -->
                       <li class="nav-item">
-                        <a class="nav-link myWhiteTex" href="#">ABOUT US</a>
+                        <a class="nav-link myWhiteTex" href="./aboutUS.html"
+                          >ABOUT US</a
+                        >
                       </li>
                       <!-- nav-item PAGES dropdown -->
                       <li class="nav-item dropdown">
@@ -833,7 +838,24 @@
     ></script>
     <script src="./js/util.js"></script>
     <script src="./js/mainBackToTop.js"></script>
+    <!-- menu js -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
+      integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script>
+      $(window).on("scroll", function () {
+        var scroll = $(window).scrollTop();
 
+        if (scroll >= 80) {
+          $("#site-header").addClass("nav-fixed");
+        } else {
+          $("#site-header").removeClass("nav-fixed");
+        }
+      });
+    </script>
     <!-- OWL FUNCTION -->
     <script>
       $(document).ready(function () {
