--- a/contact.html
+++ b/contact.html
@@ -173,11 +173,27 @@
                   PAGES
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="./Blog_1/blog.html">
+                      Blog Posts</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="./caps_/index404.html"
+                      >404</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="./Landing_page/landingPage.html"
+                      >LANDING PAGE</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="./caps_/ElementsPage.html"
+                      >Elements Page</a
+                    >
                   </li>
                 </ul>
               </li>
