--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 id="menu-item-22"
                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22 nav-item"
               >
-                <a href="#" class="nav-link">Contact</a>
+                <a href="./contact.html" class="nav-link">Contact</a>
               </li>
             </ul>
             <ul class="navbar-nav">
